--- a/script_02.Rmd
+++ b/script_02.Rmd
@@ -21,6 +21,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Once you have finished cleaning your data, figure out the course with the highest enrollment. And figure out how many students are enrolled in Gov 50. If you get a number much lower than 151, you have done something wrong . . .
 
+```{r}
+raw <- read_excel(path = "raw_data/class_enrollment_summary_by_term_9-17-2020.xlsx", skip = 3)
+view(raw)
+
+```
 
 
 
